--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -49,7 +49,7 @@ menu:
   home: /
   #categories: /categories/
   archives: /archives/
-  tags: /tags/
+  #tags: /tags/
   about: /about/
   #sitemap: /sitemap.xml
   #commonweal: /404/
