--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -537,7 +537,7 @@ tabs:
 #! ---------------------------------------------------------------
 
 # Motion
-use_motion: false
+use_motion: true
 
 # Fancybox
 fancybox: true
