--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 尽欢
-subtitle:
-description:
+title: 盡歡
+subtitle: '- 無貪 , 無執 -'
+description: 未来不可知
 keywords:
-author: Sagittaria
+author: 盐生
 language: zh-CN
 timezone:
 
